@@ -15,6 +15,7 @@ Bug fixes:
 - [#5321] Update .htaccess to be Apache 2.4 compatible
 
 Cleanup:
+- [#5601] Rename tx_seminars_Model_TimeSlot to Tx_Seminars_Model_TimeSlot
 - [#5600] Rename tx_seminars_Model_TargetGroup to Tx_Seminars_Model_TargetGroup
 - [#5599] Rename tx_seminars_Model_Speaker to Tx_Seminars_Model_Speaker
 - [#5598] Rename tx_seminars_Model_Skill to Tx_Seminars_Model_Skill
